fix(style): améliore le contraste du texte utilisé sur le bouton d'authentification principal

--- a/scss/apsolu.scss
+++ b/scss/apsolu.scss
@@ -1096,7 +1096,7 @@ les informations de manière abrupte. */
 /* Met en avant le bouton d'authentification. */
 .login-container .login-identityproviders .login-identityprovider-btn {
     background-color: $custom-color-1;
-    color: $apsolu-dark;
+    color: #000000;
     font-size: 1.1em;
     font-weight: 600;
 }
